--- a/app/src/main/res/layout/item_retail_seller_products.xml
+++ b/app/src/main/res/layout/item_retail_seller_products.xml
@@ -54,15 +54,15 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/purple_500"
                     android:textStyle="bold"
-                    android:text="Price: "
+                    android:text="Total Price: "
                     android:textSize="15dp"/>
                 <TextView
-                    android:id="@+id/textViewItemPriceValue"
+                    android:id="@+id/textViewItemTotalPriceValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:textStyle="bold"
-                    android:text="$13 c/u"
+                    android:text="$156"
                     android:textSize="15dp"/>
             </LinearLayout>
             <LinearLayout
@@ -72,7 +72,30 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp">
                 <TextView
-                    android:id="@+id/textViewItemTotalPrice"
+                    android:id="@+id/textViewItemQuantity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/purple_500"
+                    android:textStyle="bold"
+                    android:text="Quantity: "
+                    android:textSize="15dp"/>
+                <TextView
+                    android:id="@+id/textViewItemQuantityValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:text="12 unidades"
+                    android:textSize="15dp" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp">
+                <TextView
+                    android:id="@+id/textViewItemDescription"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/purple_500"
@@ -85,12 +108,12 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:textStyle="bold"
-                    android:text="Caja de 12 unidades"
-                    android:textSize="15dp"
-                    android:lines="2" />
+                    android:text="Marca Primor"
+                    android:textSize="15dp" />
             </LinearLayout>
 
             <Button
+                android:id="@+id/btnAddToCart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
