--- a/app/src/main/res/layout/item_wholesaler_product.xml
+++ b/app/src/main/res/layout/item_wholesaler_product.xml
@@ -27,6 +27,8 @@
             android:id="@+id/txtTitleWholesalerProduct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
             android:text=""
             android:textSize="13dp"/>
 
@@ -44,6 +46,8 @@
             android:id="@+id/txtDescriptionWholesalerProduct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
             android:text=""
             android:textSize="13dp"/>
         <TextView
@@ -59,6 +63,8 @@
             android:id="@+id/txtPriceWholesalerProduct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
             android:text=""
             android:textSize="10dp"/>
 
