--- a/app/src/main/res/layout/activity_wholesaler_orders.xml
+++ b/app/src/main/res/layout/activity_wholesaler_orders.xml
@@ -9,17 +9,32 @@
     android:layout_height="match_parent"
     tools:context=".WholesalerOrdersActivity">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Accepted Orders"
-        android:textSize="25dp"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="10dp"
-        android:textAlignment="center"/>
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
+        <Button
+            android:id="@+id/btnAccepted"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Accepted Orders"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:textColor="@color/purple_700"
+            style="?android:attr/borderlessButtonStyle" />
+        <Button
+            android:id="@+id/btnPending"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pending Orders"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:textColor="@color/black"
+            style="?android:attr/borderlessButtonStyle"/>
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
@@ -27,7 +42,7 @@
         android:layout_weight="1"
         android:id="@+id/recyclerViewCartAccepted"/>
 
-    <TextView
+    <!--<TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Pending Orders"
@@ -43,6 +58,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:id="@+id/recyclerViewCartPending"/>
+        android:id="@+id/recyclerViewCartPending"/>-->
 
 </LinearLayout>
