--- a/app/src/main/res/layout/item_retail_seller_products.xml
+++ b/app/src/main/res/layout/item_retail_seller_products.xml
@@ -91,6 +91,7 @@
             </LinearLayout>
 
             <Button
+                android:id="@+id/btnAddToCar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
