--- a/app/src/main/res/layout/item_wholesaler_product.xml
+++ b/app/src/main/res/layout/item_wholesaler_product.xml
@@ -86,6 +86,7 @@
                 app:fabSize="mini" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/btnDeletedProduct"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
